To check updated file

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
           </div>
         </div>
         <div>
-          <img src="./css/right.png" alt="right logo" width="500px" height="400px" />
+          <img
+            src="./css/right.png"
+            alt="right logo"
+            width="500px"
+            height="400px"
+          />
         </div>
       </main>
     </div>
